# allhomes_py

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test_coverage.yaml
allhomes_py/: __init__.py  core.py  example_usage.py
allhomes_py/_data/: __init__.py  divisions_ACT.csv  divisions_NSW.csv
docs/: KNOWN_DATA_ISSUES.md
tests/: test_core.py
